tests/src/frontend/syntax/invalid/foreachfield_arg.sk

base class B {
  macro fun m(): void {
    #forEachField(a) a
  }
}

fun main(): void {
  print_string("FAIL");
}
